--- a/lienhe.html
+++ b/lienhe.html
@@ -39,7 +39,7 @@ h1{
     <br>
     Nội Dung:
     <br>
-    <textarea name="" id="" cols="30" rows="10">Xin hãy nhập ý kiến góp ý vào đây</textarea>
+    <textarea name="" id="" cols="30" rows="10">Xin hãy sdasddas </textarea>
     <br>
 <input type="submit" value="Gửi">
 
