--- a/index.html
+++ b/index.html
@@ -1,10 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Organic Shop Demo</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web bán nước suối</title>
+    <link rel="stylesheet" href="style1.css">
+   
 </head>
+<style>
+    #menu .item a:hover{
+        color: black;
+    }
+    #wp-products img:hover{
+        transform: scale(0.9);
+        transition: all 0.2s;
+    }
+</style>
 <body>
-  <h1>Welcome to Organic Shop!</h1>
-  <p>Trang demo giao diện</p>
+    
+    <div id="thong1"> 
+    <div id="thong2">
+    <a href="" class="logo">
+        <img src="Anh/Untitled-1.jpg" alt="">
+    </a>
+    <div id="menu">
+        <div class="item">
+            <a href="baithigiuaki.html">Trang Chủ</a>
+        </div>
+        <div class="item">
+            <a href="sanpham.html" target="_self">Sản Phẩm</a>
+        </div>
+        <div class="item">
+            <a href="lienhe.html">Liên Hệ</a>
+        </div>
+        <div class="item">
+            <a href="gioithieu.html">Giới Thiệu</a>
+        </div>
+        </div>
+        <div id="thong3">
+            <div class="item">
+            <img src="Anh/cart.png" alt="">
+        </div>
+    </div>
+</div>
+<div id="banner">
+    <div class="box-left">
+    <h2>
+        <span>NƯỚC SUỐI</span>
+    </BR>
+        <span>TINH KHIẾT</span>
+    </h2>
+    <p>Chuyên cung sỉ & lẻ các loại nước suối tinh khiết,
+         phục vụ người dùng 1 cách an toàn,
+          sạch sẽ và hoàn hảo nhất</p>
+          </BR>
+         <a href="sanpham.html" class="csw-btn-button" rel="nofollow" target="_self" >MUA NGAY</a>
+</div>
+<div class="box-right">
+    <span><img src="Anh/owe.png" alt="" width="300px" height="300px"></span>
+    <span></span><img src="Anh/bidrico.png" alt="" width="200px" height="300px"></span>
+    <span></span><img src="Anh/vinh hao.png" alt="" width="200px" height="300px"></span>
+</div>
+<div class="muiten">
+    <a href="">
+        <img src="Anh/muiten.png" alt="">
+    </a>
+</div>
+</div>
+<div id="wp-products">
+    <h2>SẢN PHẨM CỦA CHÚNG TÔI</h2>
+    <table border="1" cellspacing="0" width="100%" id="thong3">
+        <tr align="center">
+            <td><span><img src="Anh/aquafina1-liter.png" alt="" width="300" height="300"></span><p>Nước suối Aquafina 500ml <br>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+        </br>104.000đ</p></td>
+                <td><span><img src="Anh/vihawa20.png" alt=""width="300" height="300"></span><p>Nước suối Vihawa</br>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+
+              <br>  55.000đ</p></td>
+            <td><span></span><img src="Anh/ion life.png" alt="" width="300" height="300"></span><p>Nước suối Ion Life</br>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+                <br> 65.000đ</p></td>
+            <td><span></span><img src="Anh/lavie.png" alt=""  width="300" height="300"></span><p>Nước suối Lavie 19 lít</br>
+            <span><img src="Anh/star.png" alt=""></span>
+             <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            <span><img src="Anh/star.png" alt=""></span>
+            </br>60.000đ</p></td>
+        </tr>
+        <tr align="center">
+            <td><span></span><img src="Anh/bidrico.png" alt="" width="300" height="300"></span><p>Nước Bidrico 19 lít </br>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.pngg" alt=""></span>
+            </br>36.000đ</p></td>
+            <td><span></span><img src="Anh/vinh hao.png" alt="" width="300" height="300"></span><p>Nước suối Vĩnh Hảo 19 lít </br>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+            </br>73.000đ</p></td>
+            <td><span></span><img src="Anh/viva.png" alt="" width="300" height="300"></span><p>Nước suối ViVa 19 lít</br>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+            </br>60.000đ</p></td>
+            <td><span></span><img src="Anh/satori voi.png" alt="" width="300" height="300"></span><p>Nước suối satori 19 lít </br>
+                <span><img src="Anh/star.png" alt=""></span>
+                <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+               <span><img src="Anh/star.png" alt=""></span>
+            </br>55.000đ</p></td>
+        </tr>
+       </table>
+               
+            </div>
+        </div>
+    </ul>
+</div>
+</div>
+</div>
+<div>
+</div>
+</div>
 </body>
 </html>
